# keyarc

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-unblock-issues.yml  ci.yml  conventional-commits.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRODUCT.md  README.md  infrastructure.md  product-document.md
docs/implementation/: README.md  appendices.md  phase-1-foundation.md  phase-2-authentication.md  phase-3-secrets.md  phase-4-teams.md  phase-5-infrastructure.md  phase-6-launch.md
frontend/: eslint.config.js  package.json  tsconfig.json
frontend/src/: test.ts
services/test/: Dockerfile
src/services/: __init__.py
src/services/account/: __init__.py  pyproject.toml
src/services/account/app/: __init__.py  config.py  database.py  dependencies.py  logging.py  main.py
src/services/account/app/routers/: __init__.py  health.py
src/services/account/app/schemas/: __init__.py
src/services/account/tests/: __init__.py  test_health.py
src/services/gateway/: __init__.py  pyproject.toml
src/services/gateway/app/: __init__.py  config.py  dependencies.py  logging.py  main.py
src/services/gateway/app/routers/: __init__.py  health.py
src/services/gateway/app/schemas/: __init__.py
src/services/gateway/tests/: test_health.py
src/shared/: __init__.py  logging.py  pyproject.toml
src/shared/audit/: __init__.py  logging.py
src/shared/models/: __init__.py  base.py
src/shared/rbac/: __init__.py  permissions.py
src/shared/schemas/: __init__.py  common.py
(+55 files in other folders)
