[project]
name = "keyarc-shared"
version = "0.1.0"
description = "Shared modules for KeyArc services"
requires-python = ">=3.14"
dependencies = ["sqlalchemy[asyncio]>=2.0.46", "structlog>=25.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
