[project]
name = "keyarc-gateway"
version = "0.1.0"
description = "KeyArc API Gateway Service"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "structlog>=25.5.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0", "httpx>=0.28.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
